[package]
name = "ton-indexer"
version = "0.1.0"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2021"
rust-version = "1.60"

[workspace]
members = ["ton-indexer-alloc", "global-config", "archive-uploader"]

[[example]]
name = "simple_node"
path = "examples/simple_node.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.1.0"
countme = { version = "3.0.0" }
crc = "2.1"
dashmap = "5.3"
fdlimit = "0.2.1"
futures = "0.3.21"
hex = "0.4"
itertools = "0.10.3"
libc = "0.2"
log = "0.4"
num-traits = "0.2"
num_cpus = "1.13.1"
parking_lot = { version = "0.12.0", features = ["hardware-lock-elision"] }
pin-project-lite = "0.2.8"
rand = "0.8"
rlimit = "0.7.0"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
smallvec = { version = "1.8.0", features = ["const_generics", "serde", "write", "union"] }
sysinfo = { version = "0.23.5", default-features = false }
thiserror = "1.0"
tokio = { version = "1.17.0", features = ["sync", "fs", "rt-multi-thread", "parking_lot"] }
tokio-util = "0.7.0"

lru_time_cache = { git = "https://github.com/Rexagon/lru_time_cache.git" }

rocksdb = { git = "https://github.com/Rexagon/rust-rocksdb.git", features = ["multi-threaded-cf", "zstd", "lz4", "jemalloc"], default-features = false }

ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", package = "ton_api", default-features = false }
tiny-adnl = { git = "https://github.com/broxus/tiny-adnl.git" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }

archive-uploader = { path = "archive-uploader", optional = true }
ton-indexer-alloc = { path = "ton-indexer-alloc" }
global-config = { path = "global-config" }

[dev-dependencies]
argh = "0.1"
config = { version = "0.11", default-features = false, features = ["yaml"] }
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
public-ip = "0.2.2"
log4rs = "1.0"
serde_yaml = "0.8"
tokio = { version = "1.16.1", features = ["full"] }

[features]
default = []
count-cells = ['countme/enable', "ton_types/profile"]

[profile.release]
debug = true
