[package]
name = "ton-indexer"
version = "0.3.2"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2021"
rust-version = "1.70"

[workspace]
members = ["global-config", "archive-downloader", "archive-uploader"]

[[example]]
name = "simple_node"
path = "examples/simple_node.rs"

[dependencies]
ahash = "0.8"
anyhow = "1.0"
arc-swap = "1.5.0"
async-trait = "0.1"
bytes = "1.1.0"
bumpalo = "3.12"
countme = { version = "3.0.0" }
crc = "3.0"
dashmap = "5.3"
everscale-network = "0.5.0"
fdlimit = "0.2.1"
futures-util = "0.3"
hex = "0.4"
humantime = "2.1.0"
libc = "0.2"
num-traits = "0.2"
once_cell = "1.12.0"
parking_lot = { version = "0.12.0", features = ["hardware-lock-elision"] }
rand = "0.8"
rlimit = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
smallvec = { version = "1.8.0", features = ["const_generics", "serde", "write", "union"] }
sysinfo = { version = "0.29.0", default-features = false }
thiserror = "1.0"
tl-proto = { version = "0.4", features = ["derive"] }
tokio = { version = "1", features = ["sync", "fs", "rt-multi-thread", "parking_lot"] }
tokio-util = "0.7.0"
tracing = "0.1"
broxus-util = { version = "0.2", default-features = false, features = ["alloc"] }

weedb = { version = "0.1", features = ["zstd", "lz4", "jemalloc"] }

ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }

archive-uploader = { path = "archive-uploader", optional = true }
global-config = { path = "global-config" }
bytesize = { version = "1.2.0", features = ["serde"] }
quick_cache = "0.4.0"

[dev-dependencies]
argh = "0.1"
cargo-husky = { version = "1.5.0", features = [
    "precommit-hook",
    "run-cargo-test",
    "run-cargo-clippy",
    "run-cargo-fmt",
] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
broxus-util = { version = "0.2", default-features = false, features = [
    "config",
    "alloc",
    "public-ip",
    "signal"
] }

[features]
default = []
count-cells = ["countme/enable", "ton_types/profile"]
archive-uploader = ["dep:archive-uploader"]
alloc-profiling = ["broxus-util/alloc-profiling"]
venom = ["ton_block/venom"]
ton = ["ton_block/ton"]

[profile.release]
debug = true
