[package]
name = "global-config"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
everscale-crypto = "0.2.0-pre.1"
everscale-network = { version = "0.5.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
