[package]
name = "ip-resolver"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
crc32fast = "1.3"
public-ip = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["net", "time", "rt", "macros"] }

[dev-dependencies]
serde_json = "1"
