[package]
name = "node-indexer"
version = "0.1.0"
authors = ["Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared-deps = {path = "../shared-deps"}
parking_lot = "0.11.1"
adnl = {git = "git://github.com/broxus/ton-labs-adnl.git"}
futures = "0.3.15"
bb8 = "0.7.0"
thiserror = "1.0.25"
dashmap = "4.0.2"
