[package]
name = "node-indexer"
version = "0.1.0"
authors = ["Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared-deps = {path = "../shared-deps"}
parking_lot = "0.11.1"
adnl = {git = "git://github.com/broxus/ton-labs-adnl.git"}
futures = "0.3.15"
bb8 = "0.7.0"
thiserror = "1.0.25"
dashmap = "4.0.2"


anyhow = "1.0"
async-trait = "0.1.50"
config = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.8" }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.8.3"


ton_abi = { git = "https://github.com/tonlabs/ton-labs-abi.git" }
ton_api = { git = "https://github.com/broxus/ton-labs-tl.git", branch = "original", package = "ton_api" }
ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
ton_executor = { git = "https://github.com/broxus/ton-labs-executor.git" }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
ton_vm = { git = "https://github.com/broxus/ton-labs-vm.git" }
log = "0.4.14"
tryhard = "0.3.0"
tokio-stream = "0.1.6"
either = "1.6.1"

[profile.release]
debug=true