[package]
name = "node-indexer"
version = "0.1.0"
authors = ["Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>"]
edition = "2018"

[dependencies]
tiny-adnl = { git = "https://github.com/broxus/tiny-adnl.git" }
parking_lot = "0.11.1"
futures = "0.3.15"
bytes = "1.0"
bb8 = "0.7.0"
thiserror = "1.0.25"
dashmap = "4.0.2"
aes = { version = "0.7", features = ["ctr"] }
generic-array = "0.14"
anyhow = "1.0"
async-trait = "0.1.50"
rand = "0.7"
sha2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
curve25519-dalek = "3.1"
ed25519-dalek = "1.0"
log = "0.4.14"
tryhard = "0.4.0"
tokio-io-timeout = "1.1"
either = "1.6.1"
chrono = "0.4.19"
hex = "0.4.3"
x25519-dalek = "1"


ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_block = { git = "https://github.com/tonlabs/ton-labs-block.git" }
ton_types = { git = "https://github.com/tonlabs/ton-labs-types.git" }
nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
shared-deps = { path = "../shared-deps" }

[dependencies.ton_api]
git = "https://github.com/broxus/ton-labs-tl.git"
branch = "original"
package = "ton_api"
features = ["lite_api", "ton_api"]