[package]
name = "ton-indexer-alloc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemalloc-sys = { version = "0.3.2", features = ["unprefixed_malloc_on_supported_platforms", "background_threads" ] }
errno = "0.2.7"
log = "0.4.14"

[features]
stats = ["jemalloc-sys/stats"]

