[package]
name = "ton-indexer-alloc"
version = "0.1.0"
edition = "2018"

[dependencies]
errno = "0.2"
tikv-jemallocator = "0.4"
tikv-jemalloc-sys = { version = "0.4", features = ["unprefixed_malloc_on_supported_platforms", "background_threads"] }
libc = "0.2"
log = "0.4.14"

[features]
stats = ["tikv-jemalloc-sys/stats"]
