[package]
name = "ton-indexer-alloc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
errno = "0.2"
log = "0.4"
tikv-jemalloc-ctl = { version = "0.5" }
tikv-jemalloc-sys = { version = "0.5", features = ["unprefixed_malloc_on_supported_platforms", "background_threads", "profiling"] }
tikv-jemallocator = { version = "0.5", features = ["profiling", "unprefixed_malloc_on_supported_platforms", "background_threads"] }

[features]
stats = ["tikv-jemalloc-sys/stats"]

[dev-dependencies]
tempfile = "3.3.0"
